Improved database online check (#6)